syntax="proto3";
option go_package = "./proto";
package chaty;

message JoinRequest{
    string userName = 1;
}
message JoinResponse{
    string userName = 1;
    string userId = 2;
}
message ChatMessage {
    string userId = 1;
    string userName = 2;
    string text = 3;
    string id = 4;
}
message MessageUpdate {
    bool isRead = 1;
}
message ReadMessage{
    string id = 1;
    string messageId = 2;
}
message MessageResponse {
    bool isOk = 1;
    string requestId = 2;
}
message User {
    string userId = 1;
    string userName = 2;
}
message Users{
    repeated User users = 1;
}
message UserEvents {
    string userId = 1;
    Events events = 2;
    string userName =3;
    enum Events {
        joined = 0;
        left = 1;
    }
}
message TypingState {
    string userId = 1;
    bool isTyping = 2;
}
message ListUsers {
    string userId = 1;
}
message ClientEvents {
    oneof event {
        JoinRequest joinRequest = 1;
        ChatMessage chatMessage = 2;
        TypingState typingState = 3;
        ListUsers listUsers = 4;
        ReadMessage readMessage = 5;
    }
}
message ServerEvents {
    oneof event {
        JoinResponse joinResponse = 1;
        MessageResponse messageResponse = 2;
        Users users = 3;
        UserEvents userEvents =4;
        ChatMessage chatMessage = 5;
        TypingState typingState = 6;
        MessageUpdate messageUpdate = 7;
    }
}

service ChatService {
    rpc Connect(stream ClientEvents) returns (stream ServerEvents);
}